# Computeranimation

./: .gitignore  README.md
ca-mass-springs/: CMakeLists.txt  README.md
ca-mass-springs/.cache/clangd/index/: GL.h.F92086ADE5093915.idx  MassSpringSystem.cpp.A25F69A6A00EB4D7.idx  MassSpringSystem.h.9927975305644212.idx  MatVec.h.EF0C25C6E98CEFB3.idx  Particle.h.BAD20797F28A69AD.idx  Shader.cpp.EE67D39CCAF870D6.idx  Shader.h.F2E7CB9DEA094787.idx  Sphere.cpp.638620C10FFF7E32.idx  Sphere.h.62FBDA39CA9FA393.idx  Spring.h.4A2C383C8CB1D792.idx  TrackballViewer.cpp.8A140CC8C22D319F.idx  TrackballViewer.h.E077357BE8C0CC80.idx  Triangle.h.57DEF119C1097CB5.idx  Viewer.cpp.44FAB37B87F21A07.idx  Viewer.h.55604ECFDF59DA16.idx  Window.cpp.1637B26D66DB9607.idx  Window.h.7E8615B7D782D947.idx  cocoa_init.m.E8FB6552C3CE5B9C.idx  cocoa_joystick.h.3399439B6E8D2DAF.idx  cocoa_joystick.m.5410BD33A677E329.idx  cocoa_monitor.m.6B7B7B96B73FC0E4.idx  cocoa_platform.h.A24DD29A12220722.idx  cocoa_time.c.50A06FDEEF7DEAD6.idx  cocoa_window.m.596743B22ECFF713.idx  context.c.A2BFFFE60A09F63D.idx  egl_context.c.8E1D1238DAE17B1E.idx  egl_context.h.D074C795751AEE7C.idx  glew.c.96D2FD984C10DEAD.idx  glew.h.63D5523244E469A5.idx  glfw3.h.A8481BDF37537741.idx  imconfig.h.6025B978CA7E67E8.idx  imgui.cpp.AB0FCEE0D414B862.idx  imgui.h.3251569146B537CE.idx  imgui_demo.cpp.9CFD4B2CA255C16B.idx  imgui_draw.cpp.30B1808A5ED4679B.idx  imgui_impl_glfw.cpp.8F7ECBCA86E1D64B.idx  imgui_impl_glfw.h.93993518901CD679.idx  imgui_impl_opengl3.cpp.6FE02053EF1F0454.idx  imgui_impl_opengl3.h.CDBDD924F1501BEB.idx  imgui_internal.h.BE84240EABE06612.idx  (+24 more)
ca-mass-springs/doc/: MassSpringSystem_8cpp.html  MassSpringSystem_8cpp__incl.map  MassSpringSystem_8cpp__incl.md5  MassSpringSystem_8h.html  MassSpringSystem_8h__dep__incl.map  MassSpringSystem_8h__dep__incl.md5  MassSpringSystem_8h__incl.map  MassSpringSystem_8h__incl.md5  MassSpringSystem_8h_source.html  Particle_8h.html  Particle_8h__dep__incl.map  Particle_8h__dep__incl.md5  Particle_8h__incl.map  Particle_8h__incl.md5  Particle_8h_source.html  README_8md.html  Sphere_8cpp.html  Sphere_8cpp__incl.map  Sphere_8cpp__incl.md5  Sphere_8h.html  Sphere_8h__dep__incl.map  Sphere_8h__dep__incl.md5  Sphere_8h__incl.map  Sphere_8h__incl.md5  Sphere_8h_source.html  Spring_8h.html  Spring_8h__dep__incl.map  Spring_8h__dep__incl.md5  Spring_8h__incl.map  Spring_8h__incl.md5  Spring_8h_source.html  Triangle_8h.html  Triangle_8h__dep__incl.map  Triangle_8h__dep__incl.md5  Triangle_8h__incl.map  Triangle_8h__incl.md5  Triangle_8h_source.html  Viewer_8cpp.html  Viewer_8cpp__incl.map  Viewer_8cpp__incl.md5  (+71 more)
ca-mass-springs/doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+24 more)
ca-mass-springs/src/: CMakeLists.txt  MassSpringSystem.cpp  MassSpringSystem.h  Particle.h  Sphere.cpp  Sphere.h  Spring.h  Triangle.h  Viewer.cpp  Viewer.h  main.cpp  simple_shader.h
ca-rigid-bodies/: CMakeLists.txt  README.md
ca-rigid-bodies/doc/: README_8md.html  RigidBodySystem_8cpp.html  RigidBodySystem_8cpp__incl.map  RigidBodySystem_8cpp__incl.md5  RigidBodySystem_8h.html  RigidBodySystem_8h__dep__incl.map  RigidBodySystem_8h__dep__incl.md5  RigidBodySystem_8h__incl.map  RigidBodySystem_8h__incl.md5  RigidBodySystem_8h_source.html  RigidBody_8cpp.html  RigidBody_8cpp__incl.map  RigidBody_8cpp__incl.md5  RigidBody_8h.html  RigidBody_8h__dep__incl.map  RigidBody_8h__dep__incl.md5  RigidBody_8h__incl.map  RigidBody_8h__incl.md5  RigidBody_8h_source.html  Sphere_8cpp.html  Sphere_8cpp__incl.map  Sphere_8cpp__incl.md5  Sphere_8h.html  Sphere_8h__dep__incl.map  Sphere_8h__dep__incl.md5  Sphere_8h__incl.map  Sphere_8h__incl.md5  Sphere_8h_source.html  Viewer_8cpp.html  Viewer_8cpp__incl.map  Viewer_8cpp__incl.md5  Viewer_8h.html  Viewer_8h__dep__incl.map  Viewer_8h__dep__incl.md5  Viewer_8h__incl.map  Viewer_8h__incl.md5  Viewer_8h_source.html  annotated.html  classRigidBody-members.html  classRigidBody.html  (+52 more)
ca-rigid-bodies/doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js  variables_0.js  (+16 more)
ca-rigid-bodies/src/: CMakeLists.txt  RigidBody.cpp  RigidBody.h  RigidBodySystem.cpp  RigidBodySystem.h  Viewer.cpp  Viewer.h  main.cpp  simple_shader.h
